tests/algorithms/x/PHP/maths/largest_of_very_large_numbers.out
Fatal error: Cannot redeclare function log10() in /workspace/mochi/tests/algorithms/x/PHP/maths/largest_of_very_large_numbers.php on line 31